version 1.1 login